--- a/backend/client-service/package.json
+++ b/backend/client-service/package.json
@@ -1,14 +1,12 @@
 {
   "name": "client-service",
   "version": "1.0.0",
-  "description": "Tiger Tickets client service for event viewing and ticket purchasing",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": ["tickets", "events", "microservice"],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
