--- a/backend/user-authentication/package.json
+++ b/backend/user-authentication/package.json
@@ -4,7 +4,12 @@
   "description": "User authentication service with JWT for Tiger Tickets",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:unit": "jest __tests__/unit",
+    "test:integration": "jest __tests__/integration",
+    "test:verbose": "jest --verbose --coverage"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +24,37 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.0",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "controllers/**/*.js",
+      "middleware/**/*.js",
+      "routes/**/*.js",
+      "!**/__tests__/**",
+      "!**/node_modules/**",
+      "!**/coverage/**"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "verbose": true,
+    "testTimeout": 10000,
+    "clearMocks": true,
+    "resetMocks": true,
+    "restoreMocks": true
   }
 }
